[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://SRAFreePixelFontPack/PixelHigh.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.486275, 0.0941176, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.0196078, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.835294, 0.235294, 0.415686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.0196078, 0.117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_right = 450.0
margin_bottom = 36.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HPBarUnder" type="ProgressBar" parent="."]
margin_right = 450.0
margin_bottom = 36.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="XPBar" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -37.8
margin_right = -581.168
margin_bottom = -1.8
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="XPBarUnder" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -37.8
margin_right = -581.168
margin_bottom = -1.8
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]

[node name="LevelText" type="Label" parent="."]
margin_left = 7.0
margin_top = 49.0
margin_right = 47.0
margin_bottom = 63.0
text = "Hejsan"
